infra/k8s/publisher.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactional-outbox-publisher-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactional-outbox-publisher
  template:
    metadata:
      labels:
        app: transactional-outbox-publisher
    spec:
      containers:
        - name: transactional-outbox-publisher
          image: transactional-outbox/publisher  
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: transactional-outbox-publisher-srv
spec:
  selector:
    app: transactional-outbox-publisher
  ports:
    - name: transactional-outbox-publisher
      protocol: TCP
      port: 3000
      targetPort: 3000
