infra/k8s/subscriber.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactional-outbox-subscriber-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactional-outbox-subscriber
  template:
    metadata:
      labels:
        app: transactional-outbox-subscriber
    spec:
      containers:
        - name: transactional-outbox-subscriber
          image: transactional-outbox/subscriber
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: transactional-outbox-subscriber-srv
spec:
  selector:
    app: transactional-outbox-subscriber
  ports:
    - name: transactional-outbox-subscriber
      protocol: TCP
      port: 3000
      targetPort: 3000
